--- a/templates/HomePage/home_base.html
+++ b/templates/HomePage/home_base.html
@@ -228,7 +228,7 @@
                             <li><a href="#"><i class="fa fa-angle-double-right"></i>About us</a></li>
                             <li><a href="{% url 'home_page:service' %}"><i class="fa fa-angle-double-right"></i>Our
                                 Services</a></li>
-                            <li><a href="{% url 'profile:dashboard' %}"><i class="fa fa-angle-double-right"></i>Creative
+                            <li><a href="{% url 'dashboard:dashboard' %}"><i class="fa fa-angle-double-right"></i>Creative
                                 Portfolio</a></li>
                             <li><a href="{% url 'home_page:price' %}"><i class="fa fa-angle-double-right"></i>Our
                                 Pricing</a></li>
