--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -60,7 +60,7 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item {% block documentation %} {% endblock %}">
-                                <a class="nav-link" href="{% url 'profile:dashboard' %}">
+                                <a class="nav-link" href="{% url 'dashboard:dashboard' %}">
                                     <span class="tim-note">Documentation </span>
                                 </a>
                             </li>
@@ -71,7 +71,7 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item {% block user_update %} {% endblock %} ">
-                                <a class="nav-link" href="{% url 'profile:userUpdate' %}">
+                                <a class="nav-link" href="{% url 'dashboard:userUpdate' %}">
                                     <span class="tim-note"> Name </span>
                                 </a>
                             </li>
@@ -83,7 +83,7 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item  {% block profile_update %} {% endblock %}">
-                                <a class="nav-link " href="{% url 'profile:profileUpdate' %}">
+                                <a class="nav-link " href="{% url 'dashboard:profileUpdate' %}">
                                     <span class="tim-note"> Profile </span>
                                 </a>
                             </li>
@@ -97,7 +97,7 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item {% block layout_update %} {% endblock %}">
-                                <a class="nav-link" href="{% url 'profile:layoutUpdate' %}">
+                                <a class="nav-link" href="{% url 'dashboard:layoutUpdate' %}">
                                     <span class="tim-note"> Layout </span>
                                 </a>
                             </li>
@@ -110,7 +110,7 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item {% block testimonial_update %} {% endblock %}">
-                                <a class="nav-link" href="{% url 'profile:testimonialCreate' %}">
+                                <a class="nav-link" href="{% url 'dashboard:testimonialCreate' %}">
                                     <span class="tim-note"> Testimonial </span>
                                 </a>
                             </li>
@@ -123,7 +123,7 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item {% block skill_update %} {% endblock %} ">
-                                <a class="nav-link" href="{% url 'profile:skillCreate' %}">
+                                <a class="nav-link" href="{% url 'dashboard:skillCreate' %}">
                                     <span class="tim-note"> Skill </span>
                                 </a>
                             </li>
@@ -136,7 +136,7 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item {% block service_update %} {% endblock %}">
-                                <a class="nav-link" href="{% url 'profile:serviceCreate' %}">
+                                <a class="nav-link" href="{% url 'dashboard:serviceCreate' %}">
                                     <span class="tim-note"> Service </span>
                                 </a>
                             </li>
@@ -149,7 +149,7 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item {% block resume_update %} {% endblock %}">
-                                <a class="nav-link" href="{% url 'profile:resumeCreate' %}">
+                                <a class="nav-link" href="{% url 'dashboard:resumeCreate' %}">
                                     <span class="tim-note"> Resume </span>
                                 </a>
                             </li>
@@ -163,7 +163,7 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item {% block project_update %} {% endblock %}">
-                                <a class="nav-link" href="{% url 'profile:projectCreate' %}">
+                                <a class="nav-link" href="{% url 'dashboard:projectCreate' %}">
                                     <span class="tim-note"> Project </span>
                                 </a>
                             </li>
@@ -176,7 +176,7 @@
                     <div class="collapse show" id="pagesExamples">
                         <ul class="nav">
                             <li class="nav-item {% block item_update %} {% endblock %}">
-                                <a class="nav-link" href="{% url 'profile:projectItemsCreate' %}">
+                                <a class="nav-link" href="{% url 'dashboard:projectItemsCreate' %}">
                                     <span class="tim-note"> Item </span>
                                 </a>
                             </li>
