--- a/templates/dashboard/userName.html
+++ b/templates/dashboard/userName.html
@@ -10,7 +10,7 @@
         <div class="container mt-4">
             <div class="row  mt-4">
                 <div class="col-12 ">
-                    <form action="{% url 'profile:userUpdate' %}" method="post">
+                    <form action="{% url 'dashboard:userUpdate' %}" method="post">
                         <div class="card m-3">
                             <div class="card-header card-header-primary card-header-text">
                                 <div class="card-text">
