--- a/templates/HomePage/blog/blog.html
+++ b/templates/HomePage/blog/blog.html
@@ -45,7 +45,7 @@
 
                             <div class="col-lg-6 col-md-6 col-12">
                                 <!-- Single Blog -->
-                                <div class="single-blog">
+                                <div class="single-blog" style="height: 50vh;">
                                     <div class="blog-img">
                                         <img src="{{ item.imageURL }}" alt="#">
                                         <span class="date">{{ item.timestamp|date }}</span>
