--- a/templates/HomePage/blog/blog_update.html
+++ b/templates/HomePage/blog/blog_update.html
@@ -8,14 +8,9 @@
     <style>
         .card {
             box-shadow: 15px 15px 10px rgba(0, 0, 0, .095) !important;
-
         }
     </style>
 {% endblock %}
-
-
-
-
 
 {% block content %}
 
@@ -27,15 +22,14 @@
                     <div class="display-4 text-primary">
                         <h2 class="card-title align-items-center text-center text-capitalize ">
                             Article Update</h2>
-                        <p class="text-center"> {{ post.title }}</p>
+                        <p class="text-center text-capitalize"> {{ post.title }}</p>
                     </div>
                 </div>
                 <div class="col-12 ">
-
                     <div class="card box-shadow mt-5">
-
                         <div class="card-content">
-                            <form action="{% url 'blog:update_post' post.slug %}" method="post" enctype="multipart/form-data">
+                            <form action="{% url 'blog:update_post' post.slug %}" method="post"
+                                  enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="col-12">
                                     <div class="col-12 mt-5">
@@ -43,32 +37,24 @@
                                     </div>
                                     <div class="row">
 
-                                        <div class="col-md-6  mt-5">
-                                            {{ form.slug|as_crispy_field }}
-                                        </div>
-
                                         <div class="col-md-6 mt-5 text-dark">
-                                            <div class="font-weight-bold ">
+                                            <div for="" class="font-weight-bold  ">
                                                 Image
                                             </div>
                                             {{ form.image }}
                                         </div>
+                                        <div class="col-md-6  mt-5">
+                                            {{ form.category|as_crispy_field }}
+                                        </div>
                                     </div>
                                 </div>
-
                                 <div class="col-12   text-dark">
                                     {{ form.published_date|as_crispy_field }}
                                 </div>
 
-
-                                <div class="col-12  mt-5">
-                                    {{ form.category|as_crispy_field }}
-                                </div>
                                 <div class="col-12  mt-5">
                                     {{ form.description }}
                                 </div>
-                                <br>
-                                <br>
                                 <br>
                                 <button class="float-right btn btn-outline-primary float-left m-5 px-5 ">Update</button>
                             </form>
