--- a/templates/dashboard/blog_create.html
+++ b/templates/dashboard/blog_create.html
@@ -2,9 +2,9 @@
 {% load crispy_forms_filters %}
 
 
-{% block head_extra %}
+{% block style %}
     {{ form.media }}
-{% endblock head_extra %}
+{% endblock style %}
 
  {% block blog_update %}
      active
@@ -105,16 +105,14 @@
                         </div>
                         <div class="card-content">
 
-                            <form action="{% url 'single_url:blog_create' %}" method="post" enctype="multipart/form-data">
+                            <form action="{% url 'blog:blog_create' %}" method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="col-12">
                                     <div class="row">
-                                        <div class="col-md-6 mt-5">
+                                        <div class="col-12 mx-auto mt-5">
                                             {{ form.title|as_crispy_field }}
                                         </div>
-                                        <div class="col-md-6  mt-5">
-                                            {{ form.slug|as_crispy_field }}
-                                        </div>
+
 
                                     </div>
                                 </div>
