--- a/templates/dashboard/layout.html
+++ b/templates/dashboard/layout.html
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <form action="{% url 'profile:layoutUpdate' %}" method="post" enctype="multipart/form-data">
+                            <form action="{% url 'dashboard:layoutUpdate' %}" method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
 
                                 <input type="hidden" name="portfolio_version" id="id_portfolio_version"
