--- a/templates/dashboard/project.html
+++ b/templates/dashboard/project.html
@@ -49,7 +49,7 @@
                                                 {{ item.description }}
                                             </td>
                                             <td class="td-actions">
-                                                <form action="{% url 'profile:projectDelete' %}" method="post"
+                                                <form action="{% url 'dashboard:projectDelete' %}" method="post"
                                                       enctype="multipart/form-data">
                                                     {% csrf_token %}
                                                     <input type="hidden" name="id" value="{{ item.id }}">
@@ -93,7 +93,7 @@
                     </div>
                     <div class="card-container mt-2">
                         <div class="col-12 ">
-                            <form action="{% url 'profile:projectCreate' %}" method="post"
+                            <form action="{% url 'dashboard:projectCreate' %}" method="post"
                                   enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="col-12 ">
@@ -134,7 +134,7 @@
                         </div>
                         <div class="modal-body">
                             <p>
-                            <form action="{% url 'profile:projectUpdate' %}" method="post"
+                            <form action="{% url 'dashboard:projectUpdate' %}" method="post"
                                   enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="row">
