--- a/templates/HomePage/include/pricing_include.html
+++ b/templates/HomePage/include/pricing_include.html
@@ -24,7 +24,7 @@
                         <div class="pricing-middle">
                             <div class="circle-box">
                                 <div class="price">
-                                    <h2>${{ Free.price }}</h2>
+                                    <h2>${{ Free.price_usd }}</h2>
                                 </div>
                             </div>
                             <ul class="price-list">
@@ -50,7 +50,7 @@
                         <div class="pricing-middle">
                             <div class="circle-box">
                                 <div class="price">
-                                    <h2>${{ Standard.price }}</h2>
+                                    <h2>${{ Standard.price_usd }}</h2>
                                     <p>Monthly</p>
                                 </div>
                             </div>
@@ -85,7 +85,7 @@
                         <div class="pricing-middle">
                             <div class="circle-box">
                                 <div class="price">
-                                    <h2>${{ Premium.price }}</h2>
+                                    <h2>${{ Premium.price_usd }}</h2>
                                     <p>Quaterly</p>
                                 </div>
                             </div>
@@ -118,7 +118,7 @@
                         <div class="pricing-middle">
                             <div class="circle-box">
                                 <div class="price">
-                                    <h2>${{ Professional.price }}</h2>
+                                    <h2>${{ Professional.price_usd }}</h2>
                                     <p>Yearly</p>
                                 </div>
                             </div>
