--- a/templates/dashboard/documentation.html
+++ b/templates/dashboard/documentation.html
@@ -154,8 +154,8 @@
                     be just four or five but you can
                     add asy many item you want to add below it
                     <strong>Note: After creating a project just <a
-                            href="{% url 'dashboard:projectUpdate' %}">here</a> then you add your item <a
-                            href="{% url 'dashboard:projectItemUpdate' %}">here</a> </strong>
+                            href="{% url 'project:projectUpdate' %}">here</a> then you add your item <a
+                            href="{% url 'project:projectItemUpdate' %}">here</a> </strong>
                 </p>
             </div>
         </div>
@@ -165,7 +165,7 @@
                 <h2><strong> Item :</strong></h2>
                 <p class="text-muted font-weight-bold pl-5">
                     This is the item which is what you create and it is under a project you can view it <a
-                        href="{% url 'dashboard:projectItemUpdate' %}">here</a> to understand better a
+                        href="{% url 'project:projectItemUpdate' %}">here</a> to understand better a
                 </p>
             </div>
         </div>
