fixed static files

--- a/static_in_env/rest_framework/docs/css/base.css
+++ b/static_in_env/rest_framework/docs/css/base.css
@@ -223,7 +223,7 @@ body {
   color: #d19b3d;
 }
 
-/* @end_date Language Switcher */
+/* @end Language Switcher */
 
 
 /* @group Docs Content */
@@ -248,7 +248,7 @@ body {
   margin-top: 20px;
 }
 
-/* @end_date Docs Content */
+/* @end Docs Content */
 
 
 @media (max-width: 767px) {
