fixed static files

--- a/templates/portfolio/portfolio_v3/portfolio_v3.html
+++ b/templates/portfolio/portfolio_v3/portfolio_v3.html
@@ -39,6 +39,11 @@
         #sectionIntro {
             background: url({{ layout.backgroundImageURL }}) !important;
         }
+
+        .dark_background{
+            background-color: #3b3535 !important;
+            color: {{ layout.secondary_clor }} !important;
+        }
     </style>
 </head>
 
