--- a/templates/portfolio/portfolio_v3/service.html
+++ b/templates/portfolio/portfolio_v3/service.html
@@ -1,5 +1,5 @@
 {% load static %}
-<section id="sectionServices">
+<section id="sectionServices" class="dark_background">
     <div class="sectionTitle">
         <h1>Services</h1>
         <h6>What can I do for you</h6>
