--- a/templates/portfolio/portfolio_v3/about.html
+++ b/templates/portfolio/portfolio_v3/about.html
@@ -6,7 +6,7 @@
         <h6>Let me introduce myself</h6>
     </div>
 
-    <div class="about">
+    <div class="about dark_background">
         <div class="container">
 
             <div class="col-md-12 col-sm-12 col-xs-12 story">
