--- a/templates/portfolio/portfolio_v3/portfolio.html
+++ b/templates/portfolio/portfolio_v3/portfolio.html
@@ -1,5 +1,5 @@
 {% load static %}
-<section id="sectionPortfolio">
+<section id="sectionPortfolio" class="dark_background">
 
     <div class="sectionTitle">
         <h1>Portfolio</h1>
@@ -10,7 +10,7 @@
 
     <!--GRID START-->
 
-    <div class="container">
+    <div class="container ">
         <div id="masonry-grid" class="mGrid">
 
             <div class="gutter-sizer"></div>
